k8s/k8s-esl-rest-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esl-speech-worker
